[package]
name = "justcsv"
version = "0.2.0"
edition = "2024"
authors = ["Alexander Kalashnikov"]
description = "Simple CSV-file reader/writer"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/akmitrich/justcsv"
repository = "https://github.com/akmitrich/justcsv"
readme = "README.md"

[dependencies]
derive_more = { version = "2.0.1", features = ["from"] }
nom = "8.0.0"
